<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <GridView
        android:id="@+id/locationsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="12">

            <TextView
                android:id="@+id/nameOflocationTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/name_of_location"
                android:textSize="16sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addNewImageButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/add_new_location_button"
                android:src="@drawable/ic_baseline_add_24"
                app:fabSize="mini"
                app:tint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_with_location"
                android:padding="8dp"
                android:src="@drawable/ic_launcher_background" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_with_location"
                android:padding="8dp"
                android:src="@drawable/ic_launcher_background" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_with_location"
                android:padding="8dp"
                android:src="@drawable/ic_launcher_background" />
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>